--- a/css/login.css
+++ b/css/login.css
@@ -91,3 +91,56 @@ h1 {
         text-align: center;
     }
 }
+
+
+@media (width <=375px) {
+
+    .hero_container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 40px;
+        height: 100dvh;
+    }
+
+    .hero_article {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        width: 100%;
+        max-width: none;
+    }
+}
+
+@media (width <=425px) {
+
+    .hero_container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 40px;
+        height: 100dvh;
+    }
+
+    .hero_article {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        width: 100%;
+        max-width: none;
+    }
+
+
+    h1 {
+        font-size: 1.3rem;
+        text-align: center;
+    }
+
+    .hero_description {}
+
+    * {
+        font-size: 0.8rem;
+    }
+}
